2014-10-01  Jakub Jelinek  <jakub@redhat.com>

	PR debug/63342
	* dwarf2out.c (loc_list_from_tree): Handle TARGET_MEM_REF and
	SSA_NAME.

	PR target/63428
	* config/i386/i386.c (expand_vec_perm_pshufb): Fix up rperm[0]
	argument to avx2_permv2ti.

2014-10-01  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2014-09-30  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (fmodxf3): Enable for flag_finite_math_only only.
	(fmod<mode>3): Ditto.
	(fpremxf4_i387): Ditto.
	(reminderxf3): Ditto.
	(reminder<mode>3): Ditto.
	(fprem1xf4_i387): Ditto.

2014-09-30  Jakub Jelinek  <jakub@redhat.com>

	PR inline-asm/63282
	* ifcvt.c (dead_or_predicable): Don't call redirect_jump_1
	or invert_jump_1 if jump isn't any_condjump_p.

2014-09-29  Charles Baylis  <charles.baylis@linaro.org>

	Backport from mainline r212303
	PR target/49423
	* config/arm/arm-protos.h (arm_legitimate_address_p,
	arm_is_constant_pool_ref): Add prototypes.
	* config/arm/arm.c (arm_legitimate_address_p): Remove static.
	(arm_is_constant_pool_ref) New function.
	* config/arm/arm.md (unaligned_loadhis, arm_zero_extendhisi2_v6,
	arm_zero_extendqisi2_v6): Use Uh constraint for memory operand.
	(arm_extendhisi2, arm_extendhisi2_v6): Use Uh constraint for memory
	operand and remove pool_range and neg_pool_range attributes.
	(arm_extendqihi_insn, arm_extendqisi, arm_extendqisi_v6): Remove
	pool_range and neg_pool_range attributes.
	* config/arm/constraints.md (Uh): New constraint. (Uq): Don't allow
	constant pool references.

2014-09-28  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_output_function_epilogue): Only update
	last_address when a nonnote insn is found.

2014-09-25  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2014-09-25  Nick Clifton  <nickc@redhat.com>
	2014-09-25  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/62218
	* config/sh/sync.md (atomic_fetch_nand<mode>_soft_imask,
	atomic_test_and_set_soft_imask): Fix typo in instruction sequence.
